k8s/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  type: NodePort
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: gcr.io/mizchi-k8s-plg/node-example
          ports:
            - containerPort: 3000
